--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
   <meta name="dcterms.date" content="2022-09-22" />
   <title>Exploratory Data Analysis with R</title>
   <style>
-      code{white-space: pre-wrap;}
-      span.smallcaps{font-variant: small-caps;}
-      span.underline{text-decoration: underline;}
-      div.column{display: inline-block; vertical-align: top; width: 50%;}
+    code{white-space: pre-wrap;}
+    span.smallcaps{font-variant: small-caps;}
+    span.underline{text-decoration: underline;}
+    div.column{display: inline-block; vertical-align: top; width: 50%;}
+    div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+    ul.task-list{list-style: none;}
+    .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
   <link rel="stylesheet" href="avenir-white.css" />
   <!--[if lt IE 9]>
@@ -25,8 +28,9 @@
 <h2 id="table-of-contents">Table of Contents</h2>
 <p><a href="#getting-started">0. Getting Started</a></p>
 <p><a href="001_Importing_Data/import.html">1. Importing Data into R</a></p>
-<p><a href="002_Manipulating_Data/R_Data_manip.html">1. Manipulating Data in R</a></p>
-<p><a href="003_Data_Exploration/explore.html">3. Exploratory Analysis</a></p>
+<p><a href="002_Manipulating_Data/R_Data_manip.html">2. Manipulating Data in R</a></p>
+<p><a href="003_Data_Exploration_base_r/explore_base_r.html">3. Exploratory Analysis in base R</a></p>
+<p><a href="004_Data_Exploration_tidyr/explore_tidyverse.html">4. Exploratory Analysis in Tidyverse</a></p>
 <p><br><br><br><Br><br> <br><br><br><Br><br> <br><br><br><Br><br> <br><br><br><Br><br> <br><br><br><Br><br> <br><br><br><Br><br> <br><br><br><Br><br> <br><br><br><Br><br> <br><br><br><Br><br> <br><br><br><Br><br> <br><br><br><Br><br> <br><br><br><Br><br> <br><br><br><Br><br> <br><br><br><Br><br> <br><br><br><Br><br> <br><br><br><Br><br> <br><br><br><Br><br></p>
 <h2 id="getting-started">0. Getting Started</h2>
 <ul>
