minor fomatting data manip

--- a/002_Manipulating_Data/R_Data_manip.html
+++ b/002_Manipulating_Data/R_Data_manip.html
@@ -388,15 +388,18 @@ where you should try to figure out how to code something. If you keep
 scrolling down, you’ll find the solution, but you’ll get a lot more out
 of it if you make a solid attempt to solve the problems yourself.</li>
 </ul>
-<p><br> <br> ### Reading in the data <br> Start by either creating a
-directory called <code>EDAwithR</code> and downloading the data from
-Github or clone the Github repository for this workshop. Whichever of
-these you choose, I recommend doing it from your home directory. If you
-do and you are on a Mac or Linux machine, the <code>~</code> represents
-the home directory, and you can use the file paths exactly as they are
-written in this tutorial. If you are on Windows, paths are set up
-differently and you’ll have to modify these for your machine. <br> Start
-by setting our working directory.</p>
+<p><br> <br></p>
+<div id="reading-in-the-data" class="section level3">
+<h3>Reading in the data</h3>
+<p><br> Start by either creating a directory called
+<code>EDAwithR</code> and downloading the data from Github or clone the
+Github repository for this workshop. Whichever of these you choose, I
+recommend doing it from your home directory. If you do and you are on a
+Mac or Linux machine, the <code>~</code> represents the home directory,
+and you can use the file paths exactly as they are written in this
+tutorial. If you are on Windows, paths are set up differently and you’ll
+have to modify these for your machine. <br> Start by setting our working
+directory.</p>
 <pre class="r"><code>setwd(&quot;~/EDAwithR&quot;)</code></pre>
 <p><br> We will also create an object with the path to our data
 directory. Making these kinds of shortcuts saves you from typing in file
@@ -472,6 +475,7 @@ samples we have of each species.</p>
 problems with the data from running the previous two
 commands?</strong></p>
 <p><br> <br> <br> <br> <br> <br> <br> <br></p>
+</div>
 <div id="fixing-spelling" class="section level3">
 <h3>Fixing spelling</h3>
 <p>Looking at either of those last outputs, you should notice that we
